[gd_scene load_steps=6 format=3 uid="uid://pro5k5norh1t"]

[ext_resource type="Script" path="res://scenes/piracy_screen/piracy_screen.gd" id="1_dtj2d"]
[ext_resource type="FontFile" uid="uid://sbngatnj34n0" path="res://fonts/Thintel.ttf" id="1_hiw3d"]
[ext_resource type="AudioStream" uid="uid://07kkg555lfea" path="res://sounds/fx/piracy_warning_beep.wav" id="2_2c4nq"]

[sub_resource type="Animation" id="Animation_edxvq"]
resource_name = "tick"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLabel:visible_ratio")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5, 2.7, 2.9, 3.1, 3.3, 3.5, 3.7, 3.9, 4.1, 4.3, 4.5, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MiddleLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6, 14.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomLabel:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 14.9, 19.9),
"transitions": PackedFloat32Array(1e-05, 1, 1e-05),
"update": 0,
"values": [0.0, 0.0, 1.0]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WarningBeeper")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_2c4nq")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = false
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WarningBeeper:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel2:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.9, 5),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05),
"update": 1,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tmirl"]
_data = {
"tick": SubResource("Animation_edxvq")
}

[node name="PiracyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dtj2d")

[node name="WarningBeeper" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.72
bus = &"FX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tmirl")
}

[node name="Panel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MiddleLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 240.0
offset_bottom = 144.0
theme_override_fonts/normal_font = ExtResource("1_hiw3d")
bbcode_enabled = true
text = "
"
fit_content = true
visible_characters = 0
visible_ratio = 0.0

[node name="BottomLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 240.0
offset_bottom = 144.0
theme_override_fonts/normal_font = ExtResource("1_hiw3d")
bbcode_enabled = true
text = "[center] 






[color=RED]Do not[/color] turn off your computer. 
Stay where you are.[/center]
"
visible_characters = 0
visible_ratio = 0.0

[node name="TopLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 17.0
offset_right = 240.0
offset_bottom = 32.0
theme_override_fonts/normal_font = ExtResource("1_hiw3d")
bbcode_enabled = true
text = "[center] Video game piracy is [color=RED]illegal[/color].[/center]
"

[node name="Panel2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0)
